--- a/preditor.ipynb
+++ b/preditor.ipynb
@@ -2,156 +2,92 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "import gensim\n",
+    "from gensim.models import Word2Vec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package gutenberg to\n",
+      "[nltk_data]     C:\\Users\\herbe\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package gutenberg is already up-to-date!\n"
+     ]
+    }
+   ],
+   "source": [
+    "nltk.download('gutenberg')\n",
+    "gutenberg = nltk.corpus.gutenberg.sents()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = Word2Vec(gutenberg, vector_size=100, window=5, workers=4)\n",
+    "model.save(\"word2vec.model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_next_word(input_list,model):\n",
+    "    vector_odds = model.wv.most_similar(positive=input_list, topn=5)\n",
+    "    return vector_odds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loaded_model = Word2Vec.load(\"word2vec.model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input = [\"The\", \"book\", \"is\"]\n",
+    "possibilities = predict_next_word(input,loaded_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "showing info https://raw.githubusercontent.com/nltk/nltk_data/gh-pages/index.xml\n"
+      "Next word:  whaling\n",
+      "Possibilities:  [('whaling', 0.5997612476348877), ('testament', 0.564294159412384), ('sight', 0.5448867678642273), ('Sperm', 0.5392782092094421), ('chronicles', 0.5373831391334534)]\n"
      ]
     }
    ],
    "source": [
-    "import nltk\n",
-    "nltk.download()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from collections import defaultdict\n",
-    "from nltk.util import ngrams\n",
-    "from nltk.probability import FreqDist\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "from nltk.corpus import gutenberg\n",
-    "from concurrent.futures import ProcessPoolExecutor, as_completed"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the corpus\n",
-    "corpus = gutenberg.raw()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Tokenize the corpus\n",
-    "tokens = word_tokenize(corpus)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a n-grams model\n",
-    "n = 3\n",
-    "ngrams_model = ngrams(tokens, n)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Create a frequency distribution of the n-grams using parallel processing\n",
-    "def count_ngrams(ngrams):\n",
-    "    fdist = FreqDist(ngrams)\n",
-    "    return fdist\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with ProcessPoolExecutor() as executor:\n",
-    "    fdist = defaultdict(int)\n",
-    "    for fdist_chunk in executor.map(count_ngrams, ngrams_model, chunksize=1000):\n",
-    "        for k,v in fdist_chunk.items():\n",
-    "            fdist[k] += v\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to predict the next word\n",
-    "def predict_next_word(word):\n",
-    "    possible_ngrams = [w for w in fdist if w[:n-1] == word[-n+1:]]\n",
-    "    total = sum(fdist[w] for w in possible_ngrams)\n",
-    "    next_words = defaultdict(int)\n",
-    "    for w in possible_ngrams:\n",
-    "        next_words[w[-1]] = fdist[w]/total\n",
-    "    return max(next_words, key=next_words.get)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to predict the list of probable next words\n",
-    "def predict_next_word_list(word):\n",
-    "    possible_ngrams = [w for w in fdist if w[:n-1] == word[-n+1:]]\n",
-    "    total = sum(fdist[w] for w in possible_ngrams)\n",
-    "    next_words = defaultdict(int)\n",
-    "    for w in possible_ngrams:\n",
-    "        next_words[w[-1]] = fdist[w]/total\n",
-    "    return sorted(next_words, key=next_words.get,reverse=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save the model to a file\n",
-    "import pickle\n",
-    "with open('ngrams_model.pickle', 'wb') as handle:\n",
-    "    pickle.dump(fdist, handle, protocol=pickle.HIGHEST_PROTOCOL)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Load the model from a file\n",
-    "with open('ngrams_model.pickle', 'rb') as handle:\n",
-    "    fdist = pickle.load(handle)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Example usage\n",
-    "print(predict_next_word(('the','world')))\n",
-    "print(predict_next_word_list(('the','world')))\n"
+    "print(\"Next word: \", possibilities[0][0])\n",
+    "print(\"Possibilities: \", possibilities)"
    ]
   }
  ],
